# donut

./: .gitignore  Cargo.toml  README.md
.zed/: settings.json
aseprite/: fire.aseprite  main.aseprite  player.aseprite  saw.aseprite
assets/: assets.toml  config.toml
assets/maps/: debug-01.tmx
assets/shaders/: deferred.wgsl  emitters.wgsl  light.wgsl  main.wgsl  prepare-map.wgsl  prepare.wgsl
assets/tiles/: main.tsx
src/: app.rs  assets.rs  config.rs  game.rs  logging.rs  main.rs  renderer.rs  shader.wgsl  sprite.rs
src/assets/: animation.rs  config.rs  light.rs  map.rs  mod.rs  sprite.rs  stage.rs  texture.rs  tile_set.rs  tileset.rs
src/game/: camera.rs  light.rs  mod.rs
src/game/geo/: mod.rs  point.rs  segment.rs
src/geo/: mod.rs  point.rs  segment.rs  torus.rs  visibility.rs
src/phys/: collision.rs  mod.rs  object.rs
src/view/: camera.rs  gpu.rs  light.rs  lights.rs  mod.rs  render_target.rs  renderer.rs  surface.rs  texture.rs  vertex.rs  window.rs
src/view/gpu_data/: deferred.rs  depth.rs  mod.rs  texture.rs  texture_depth.rs  texture_multiplexer.rs  uniform.rs  vertex.rs
src/view/gpu_struct/: deferred_light.rs  light.rs  mod.rs  quad.rs  quad_emitter.rs  vertex.rs
