[package]
name = "donut"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.0"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
image = { version = "0.25.6", default-features = false, features = ["webp"] }
log = "0.4.27"
pollster = "0.4.0"
rand = { version = "0.9.1", default-features = false, features = ["alloc", "thread_rng"] }
rgb = { version = "0.8.50", default-features = false, features = ["bytemuck"] }
serde = { version = "1.0.219", features = ["derive"] }
tiled = { version = "0.14.0", default-features = false }
toml = "0.8.22"
wgpu = { version = "25.0.2", default-features = false, features = ["metal", "vulkan", "wgsl"] }
winit = { version = "0.30.11", default-features = false, features = ["wayland", "wayland-dlopen", "x11", "rwh_06"] }
